fix: 🐛 Contrast issues in dark and light-mode

--- a/src/journal/styles/_journal.scss
+++ b/src/journal/styles/_journal.scss
@@ -22,7 +22,7 @@
 	}
 
 	.pages-list .directory-item.active {
-		background-color: var(--color-theme-alt-800);
+		background-color: var(--color-theme-constrast);
 
 		.page-heading {
 			font-weight: 600;
